# book-writer

./: README.md  pyproject.toml
output/book_devsecops_20250303_171530/: book_devsecops.md  chapter_1_final.md  chapter_1_research.md  chapter_2_final.md  chapter_2_research.md
output/book_internet_of_things_20250303_155852/: book_internet_of_things.md  chapter_1_final.md  chapter_1_research.md  chapter_2_final.md  chapter_2_research.md  chapter_3_final.md  chapter_3_research.md
src/book_project/: main.py
src/book_project/crews/research/: research.py
src/book_project/crews/research/config/: agents.yaml  tasks.yaml
src/book_project/crews/writing/: writing.py
src/book_project/crews/writing/config/: agents.yaml  tasks.yaml
